# DH-VLM

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.py  app.py  create_dataset.py  create_label_studio_link.py  eval.py  invoke_agent.py  pyproject.toml  ragas_eval.py  requirements.txt  run.py
data/: create_dataset.py
evaluation/: agent_eval.py  evaluate.py  rag_eval.py  ragas_eval.py  utils.py
scripts/: create_dataset.py  deploy_agent.py  update_agent.py
src/: agent.py
src/agents/: aggregation_agent.py  archive_agent.py  handlers.py  hooks.py  image_agent.py  item_agent.py  orchestrator.py  search_agent.py
src/agents/skills/archive_skills/collection-aggregation/: SKILL.md
src/agents/skills/archive_skills/collection-summary/: SKILL.md
src/agents/skills/archive_skills/get-collection-summary/: SKILL.md
src/agents/skills/archive_skills/get-image-input/: SKILL.md
src/agents/specialized_agents/: aggregation_agent.py  image_agent.py  item_agent.py  search_agent.py
src/orchestration/: orchestrator.py
src/scripts/: delete_db.py  embed_pieces.py  populate_db.py
src/tools/: aggregation_tools.py  archive_tools.py  image_tools.py  item_tools.py  search_tools.py
src/tools/archive_tools/: collection_inventory.py  get_collection_summary.py  get_image_details.py  get_image_input.py  get_look_composition.py  get_look_images.py  get_look_visual_analysis.py  get_visual_confirmation.py  image_input.py  look_analysis.py
src/tools/search_tools/: general_search.py  listing_search.py  tavily_search.py
(+11 files in other folders)
